php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #46247 ibase_set_event_handler() is allowing to pass callback without event
Submitted: 2008-10-07 00:00 UTC Modified: 2008-10-07 15:32 UTC
From: felipe@php.net Assigned: felipe (profile)
Status: Closed Package: InterBase related
PHP Version: 5.2CVS, 5.3CVS, 6CVS OS:
Private report: No CVE-ID: None
 [2008-10-07 00:00 UTC] felipe@php.net
Description:
------------
See below.

Reproduce code:
---------------
<?php

function whatever($a, $b) { var_dump($a, $b);}
ibase_set_event_handler($x, "whatever");

Actual result:
--------------
Hang up

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-10-07 15:32 UTC] felipe@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

Fixed in 5.2, 5.3 and HEAD.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 15 07:00:01 2026 UTC