- Fixed bug #46247 (ibase_set_event_handler() is allowing to pass callback without event)